<resources>
    <string name="app_name">微社区</string>

    <string name="user_like">我喜欢的</string>
    <string name="user_collect">我的收藏</string>
    <string name="user_articles">我的文章</string>
    <string name="user_posts">我的帖子</string>
    <string name="user_followers">关注我的</string>
    <string name="user_following">我关注的</string>
    <string name="tag_manager">标签管理</string>
    <string name="read_articles">阅读过的文章</string>
    <string name="user_advise">意见反馈</string>
    <string name="profile">个人主页</string>
    <string name="post_write">发布帖子</string>
    <string name="me">我</string>
    <string name="edit_profile">修改资料</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>

    <string name="my_post">我的帖子</string>

    <string name="phone">手机</string>
    <string name="email">邮箱</string>
    <string name="bind_weibo">绑定微博</string>
    <string name="bind_github">绑定Github</string>
    <string name="bind_qq">绑定QQ</string>
    <string name="edit_password">修改账户密码</string>

    <string name="clear_cache">清理缓存</string>
    <string name="notification">消息通知</string>
    <string name="user_logout">退出账号</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="action_like">收藏</string>
    <string name="action_copy">复制链接到剪贴板</string>
    <string name="action_share">分享链接</string>

    <string name="post_publish">发表</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="title_activity_settings">Settings</string>

    <string name="error_tips">糟糕！加载失败了ヽ(≧Д≦)ノ\n 可能的原因：\n1.惨不忍睹的网络环境\n 2.服务器的不定期抽风\n 3.微社区现在心情不好拒绝服务喔~</string>

    <string name="post_hint">1.描述你的问题\n\n2.贴上相关的代码\n\n3.贴上报错信息</string>

    <string name="post_edit_title">标题: 一句话说清楚问题(6-64个字)</string>
    <string name="post_edit_tags">标签: 如php(最多5个)</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
