<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar_message"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/topbar_bg">

    <LinearLayout
        android:id="@+id/toolbar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:clickable="true"
        >
        <ImageView
            android:id="@+id/toolbar_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:onClick="onArrorClick"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_action_left" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/edit_profile"
            android:textSize="18sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/topbar_center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:gravity="right"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</RelativeLayout>
